objects/USA_Survey_Answer__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Briefcase_Survey_Question__c</fullName>
        <label>Briefcase Survey Question</label>
        <referenceTo>USA_Survey_Question__c</referenceTo>
        <relationshipLabel>Briefcase Survey Answers</relationshipLabel>
        <relationshipName>USA_Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>USA_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>USA_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>USA_Product_Master__c</referenceTo>
        <relationshipLabel>Briefcase Survey Answers</relationshipLabel>
        <relationshipName>Briefcase_Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Question_Header__c</fullName>
        <formula>USA_Briefcase_Survey_Question__r.USA_Question_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Question_Label__c</fullName>
        <formula>USA_Briefcase_Survey_Question__r.USA_Question_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Question_Type__c</fullName>
        <formula>TEXT(USA_Briefcase_Survey_Question__r.USA_Question_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>USA_Survey_Response__c</referenceTo>
        <relationshipLabel>Briefcase Survey Answers</relationshipLabel>
        <relationshipName>USA_Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>USA_Survey__c</referenceTo>
        <relationshipLabel>Briefcase Survey Answers</relationshipLabel>
        <relationshipName>Briefcase_Survey_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Briefcase Survey Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Survey Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefcase Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>